--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,6 +9,7 @@ vars:
   asmflags: "all=-trimpath={{.PWD}}"
   bin: "{{.PWD}}/bin"
   app: "trans"
+  app_bin: "{{.bin}}/{{.app}}"
 
 env:
   COMPOSE_BAKE: true
@@ -25,7 +26,8 @@ tasks:
 
   build:
     desc: common build
-    deps: [setup]
+    deps:
+      - setup
     cmds:
       - >
         {{.gobin}} build
@@ -34,6 +36,23 @@ tasks:
         -trimpath
         -gcflags="{{.gcflags}}"
         -asmflags="{{.asmflags}}"
-        -o {{.bin}}/{{.app}} cmd/{{.app}}/main.go
-      - strip {{.bin}}/{{.app}}
-      - objcopy --strip-unneeded {{.bin}}/{{.app}}
+        -o {{.app_bin}} cmd/{{.app}}/main.go
+      - strip {{.app_bin}}
+      - objcopy --strip-unneeded {{.app_bin}}
+
+  in-docker-build:
+    deps:
+      - build
+    silent: false
+    cmds:
+      - rm -f /build/bin/*
+      - upx --best --ultra-brute {{.app_bin}} -o {{.app_bin}}_upx
+      - mv {{.app_bin}}* /build/bin
+
+  docker.build:
+    desc: build bin via docker
+    deps:
+      - setup
+    silent: false
+    cmds:
+      - docker compose -f docker-compose.build.yaml up --build --force-recreate
